Filled in analysis section

--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -91,7 +91,7 @@ task into primitive actions.
   A hierarchical skill architecture is useful for collaborative task execution. To maximally benefit the collaborative aspects of complex task execution, all agents involved must have reasonable approximations of the intent and plan of each other worker. Humans are naturally receptive to skill scaffolding, expressing a complicated task in terms of actions, sub-actions, and temporal sequencing; a hierarchical skill architecture allows the intentions of each agent to be effectively communicated in a common format. One of the greatest technical challenges of collaborative exercises between multiple agents including both humans and robots is the mutual recognition of intention and action.  A method by which a participant or external observer could automate this process, would clear a significant hurdle to the ability to perform online collaborative exercises.
  
 % 5. Accounting for multiple skills complicates the learning and execution problem
-  Work by Martinson et. al. (\citeyear{QLBehaviorSelection}) shows the benefit of using combinations of pretested behavioral assemblages to successfully accomplish a complex goal in a dynamic environment. The paper associates a list of sensor states, referenced as perceptual triggers, with constructed sets of pretrained actions with stable policies. This decision reduces the MDP search space when considering potential skills to apply, while enhancing the insight human operators have into the agent's potential actions by providing an intuitive mechanism for specifying action/reaction pairs. Mugan and Kuipers (\citeyear{AutoHierarchyLearning}) approached this problem similarly to Konidaris, in that they look to autonomously abstract portable options that can be transferred between environments from their agent's experiences. Particularly of note, the QLAP algorithm operates through qualitative representations of the continuous world. This provides a tolerance for incomplete input information while disregarding irrelevant dimensions of the state space. As such, QLAP learns action hierarchies while maintaining both temporal and state abstraction. From a practical standpoint, maintaining state abstraction is crucial for maintaining usable performance levels as most real-world examples cannot be directly approached due to intractably large state space.
+  Work by Martinson et. al. (\citeyear{QLBehaviorSelection}) shows the benefit of using combinations of pretested behavioral assemblages to successfully accomplish a complex goal in a dynamic environment. Their research associates a list of sensor states, referenced as perceptual triggers, with constructed sets of pretrained actions with stable policies. This decision reduces the MDP search space when considering potential skills to apply, while enhancing the insight human operators have into the agent's potential actions by providing an intuitive mechanism for specifying action/reaction pairs. Mugan and Kuipers approached this problem similarly to Konidaris, in that they look to autonomously abstract portable options that can be transferred between environments from their agent's experiences. Particularly of note, the QLAP algorithm operates through qualitative representations of the continuous world (\cite{AutoHierarchyLearning}). This provides a tolerance for incomplete input information while disregarding irrelevant dimensions of the state space. As such, QLAP learns action hierarchies while maintaining both temporal and state abstraction. From a practical standpoint, maintaining state abstraction is crucial for maintaining usable performance levels as most real-world examples cannot be directly approached due to intractably large state space.
 
 \subsection{Q-Learning in Robotics}
 % 2. Talk about Q-Learning applied to robotics and skill acquisition here.
@@ -172,6 +172,10 @@ Set  $P_{\mathrm{hit}} = \{ s_i | \{s_i \in P_{\mathrm{hit}}\} \cap \{ i > |P_{\
 \subsection{Details and Analysis}
 \label{sec:recognition_analysis}
 Our algorithm allows a spectating agent to generate a segmented timeline of actions from those partially trained within its internal repository. The agent is then able to fully capitalize on these examplars within its existing hierarchical framework by identifying possible expert examples to process as training data. The algorithm leverages particularly strong demonstrations to propagate what is perceived as the most beneficial reward signals while processing the identification step, contributing towards converging on an optimal execution policy. This synthesis of action recognition and inverse reinforcement learning does not demand any additional resources or training beyond what is required for basic primitive execution proficiency.
+
+As with many parameterized learning methods, choosing proper values depends on a multitude of factors including (not not limited to) sensor sensitivity, agent precision of action, overlapping primitive action state density, available computational power, and memory required. While there is much room for optimization within the algorithm specified, we believe it serves well as a simple, straightforward proof-of-concept for partnering a generalized action recognition system with a data format that is a dominant standard in human-robot interaction research.
+
+One of the most troublesome concerns within any system dealing with high dimensional MDPs is maintaining sparsity of space representation. As the initialized state space increases, the process of intelligently connecting previously unseen states becomes computationally infeasible while simultaneously maintaining the responsiveness required for real-world systems. Within the context of our algorithm, it is suggested to implement a garbage collection mechanism pruning low-reward states, prioritizing the removal of such states with high connectivity. As one of our goals is to use observation to optimize the inverse problem of execution, removing entrances to bad paths as a pre-processing step can dramatically reduce an agent's search space. Knox, et. al.'s TAMER framework has begun to address this problem by using a human in the loop as an intelligent reinforcement signal \cite{TAMER}. Since the intention of an observer is not as easily discernable as that of an actor, such direct human-as-reward-signal methods are not as accessible without the introduction of a highly intuitive interface providing insight into the structure of each skill's internal representation as SMDP.
 
 %5. Analyze Algorithm:
 %	* Guards against failure
