Spruced up introduction and conclusion slightly.  At 6 total pages.

--- a/papers/AAAI/report.bib
+++ b/papers/AAAI/report.bib
@@ -15,17 +15,9 @@
   author = {Konidaris, George and Kuindersma, Scott and Grupen, Roderic A. and Barto, Andrew G.},
   editor = {Burgard, Wolfram and Roth, Dan},
   booktitle = {AAAI},
-  interhash = {7bd4c3cfeb71392807d95747fa0f3009},
-  intrahash = {48b17512c7465af06d6231a79f773bea},
   publisher = {AAAI Press},
   title = {Autonomous Skill Acquisition on a Mobile Manipulator.},
-  url = {http://dblp.uni-trier.de/db/conf/aaai/aaai2011.html#KonidarisKGB11},
   year = 2011,
-  timestamp = {2011-08-09T00:00:00.000+0200},
-  keywords = {dblp},
-  ee = {http://www.aaai.org/ocs/index.php/AAAI/AAAI11/paper/view/3724},
-  added-at = {2011-08-09T00:00:00.000+0200},
-  biburl = {http://www.bibsonomy.org/bibtex/248b17512c7465af06d6231a79f773bea/dblp}
 }
 
 @ARTICLE{RLAdvances,
@@ -147,6 +139,15 @@
  year = {2004},
  publisher = {ACM},
  address = {New York, NY, USA},
+}
+
+@inbook{OriginalInverseRL,
+  title={Algorithms for inverse reinforcement learning},
+  booktitle={Proceedings of the Seventeenth International Conference on Machine Learning},
+  publisher={Morgan Kaufmann Publishers Inc.},
+  author={Ng, A Y and Russell, S},
+  year={2000},
+  pages={663–670}
 }
 
 @INPROCEEDINGS{TAMER, 
