--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -177,22 +177,15 @@ As with many parameterized learning methods, choosing proper values depends on a
 
 One of the most troublesome concerns within any system dealing with high dimensional MDPs is maintaining sparsity of space representation. As the initialized state space increases, the process of intelligently connecting previously unseen states becomes computationally infeasible while simultaneously maintaining the responsiveness required for real-world systems. Within the context of our algorithm, it is suggested to implement a garbage collection mechanism pruning low-reward states, prioritizing the removal of such states with high connectivity. As one of our goals is to use observation to optimize the inverse problem of execution, removing entrances to bad paths as a pre-processing step can dramatically reduce an agent's search space. Knox, et. al.'s TAMER framework has begun to address this problem by using a human in the loop as an intelligent reinforcement signal \cite{TAMER}. Since the intention of an observer is not as easily discernable as that of an actor, such direct human-as-reward-signal methods are not as accessible without the introduction of a highly intuitive interface providing insight into the structure of each skill's internal representation as SMDP.
 
-%5. Analyze Algorithm:
-%	* Guards against failure
-%	* Guards against exponential state/transition growth
-%	* Benefits to execution side of the action primitives being trained
-%	* What happens with misclassification -- robustness against slippery-slope failure mode
-%	* Execution time required per primitive? How does the time requirement scale as primitives are added?
-
 \section{Experimental Setup}
 \label{sec:experiment}
-We chose to test our system on properly identifying and segmenting video of American Sign Language (ASL) gestures. American sign language provides a practical use case while testing the algorithm's tolerance to variance in training, as each training example will necessarily be unique. Our state space encompasses six dimensions, corresponding to the relative x, y, and z coordinates of each hand involved.  Our system has \textit{a priori} knowledge of a partially overlapping set of ASL gestures, having been giving limited training for each known gesture.
+We chose to test our system on properly identifying and segmenting video of American Sign Language (ASL) gestures. American sign language provides a practical use case while testing the algorithm's tolerance to variance in training, as each training example will necessarily be unique. Our state space encompasses six dimensions, corresponding to the relative x, y, and z coordinates of each hand involved.  Our system has limited \textit{a priori} knowledge of a partially overlapping set of ASL gestures, having been giving limited training for each known gesture.
 
 The observation data is gathered using a commercially-available Kinect sensor made by Microsoft.  The Kinect sensor is attached to a computer running Windows which serializes the relevant skeletal data provided by the Kinect research API, and transmits it to the recognition system, running on a Linux machine, over UDP.  
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\linewidth]{scatter_plot_left_hand.eps}
+\includegraphics[width=\linewidth]{scatter_plot_right_hand.eps}
 \caption{Overlapping Right Hand Positions in ASL Signs}
 \label{fig:asl_sign_overlap}
 \end{center}
@@ -209,9 +202,9 @@ Gesture recognition for ASL symbols is not novel.  Our attempt here is not to re
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\linewidth]{output_nowaypoints_onetrial.eps}
-\caption{Initial Recognition Without Waypointing}
-\label{fig:output_nowaypoints_onetrial}
+\includegraphics[width=\linewidth]{output_nowaypoints_repeatedtrials.eps}
+\caption{Repeated Recognition Over Time Without Waypointing}
+\label{fig:output_nowaypoints_repeatedtrials}
 \end{center}
 \end{figure}
 
@@ -219,11 +212,15 @@ Gesture recognition for ASL symbols is not novel.  Our attempt here is not to re
 \begin{center}
 \includegraphics[width=\linewidth]{output_waypoints_repeatedtrials.eps}
 \caption{Repeated Recognition Over Time With Waypointing}
-\label{fig:output_nowaypoints_repeatedtrials}
+\label{fig:output_waypoints_repeatedtrials}
 \end{center}
 \end{figure}
 
-In this section we discuss our experimental results.
+To show the effectiveness and viability of our proof-of-concept algorithm, we tested its ability to classify a set of seven American Sign Language gestures: coat, drive, in, out, school, shoes, and store. Due to the inherent similarity of movement within our gestures and low fidelity of our input signals, the chosen gestures had significant overlap in six-dimensional space. In particular, the gestures for 'shoes', 'school', and 'in' are extremely similar after being converted into our six dimensional reference frame. In all cases we trained our agent using a single, expert-provided example of unaltered, kinect-recorded data consisting of centroid coordinates (x,y,z) for each hand in a frame of reference centered on the location of the demonstrator's head. We presented our system with sequences of naturally captured data, noised data, and lossy data. 
+
+As expected, our algorithm performed without error when tested on its training data. As increasingly lengthy gesture compositions were provided throughout testing, each observed gesture became increasingly robust to both noisy data and outliers as more examples were given. The algorithm's mechanism for estimating the proper connection of previously unseen states successfully accommodated for the noise and absent states in the test data. 
+
+The complex scenario shown in \ref{fig:output_nowaypoints_repeatedtrials} and \ref{fig:output_waypoints_repeatedtrials} included the placement of some of the most similar of the seven trained gestures in close temporal proximity. We introduced additional noisy data, composited randomly from familiar states in each of the seven gestures' training data, to demonstrate our algorithm's ability to discern when there is an unrecognized action taking place. The introduction of waypointing, shown in \ref{fig:output_waypoints_repeatedtrials}, boosted overall confidence values for correct classifications and smoothed the transitions between non-confident and confident classifications. One particular example of this can be seen near frame 410, as without waypointing the gesture for 'school' is confused with the end of the 'shoes' gesture preceeding it. The lack of classification of the final 'shoes' gesture is explained by the step in which after a high confidence classification is made, the window through which the algorithm searches for effective state space traversals, $P_{\mathrm{hit}}$, is cut in half to prevent harmful self-reinforcement looping.
 
 \section{Related and Future Work}
 \label{sec:future}
