Minor work on introduction... other fixes.

--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -87,13 +87,13 @@ task into primitive actions
 
 \subsection{Hierarchical Skill Architectures}
 % 1. Talk about the need for hierarchical representation when multiple skills are required
-  In robotics, two areas of reinforcement learning research are particularly relevant to co-robot advancement: autonomously building options hierarchies and reducing the trials or information required to achieve new proficiencies. The former heavily overlaps with non-robot-centric reinforcement learning work, which aims to make high-dimensional, continuous domain problem spaces tractable. General solutions are difficult to formulate, due to the vastness of potential methods and goals for such systems. Hierarchical learning systems follow the philosophy that these highly complex problems can likely be broken into a number of simpler, tractable problems. Finding the most efficient way to discover and arrange the low-level primitive actions is an open problem, with many viable approaches (e.g., \citeauthor{LearningHierarchicalControl,EfficientSkillLearning,AutoHierarchyLearning}).
+  In robotics, two areas of reinforcement learning research are particularly relevant to co-robot advancement: autonomously building options hierarchies and reducing the trials or information required to achieve new proficiencies. The former heavily overlaps with non-robot-centric reinforcement learning work, which aims to make high-dimensional, continuous domain problem spaces tractable. General solutions are difficult to formulate, due to the vastness of potential methods and goals for such systems. Hierarchical learning systems follow the philosophy that these highly complex problems can likely be broken into a number of simpler, tractable problems. Finding the most efficient way to discover and arrange the low-level primitive actions is an open problem, with many viable approaches (e.g., \citeauthor{LearningHierarchicalControl,EfficientSkillLearning,AutoHierarchyLearning}).  A major advantage of our system is that it can easily interface with any of these general solutions.
 
 % 2. Multiple skills makes the agent more adaptable and useful
   Konidaris et. al. \shortcite{AutoSkillAcquisition} have successfully shown that the latter can be influenced through the former, exploiting hierarchical learning to enable skill transfer between environments. By extending the usefulness of a skill laboriously acquired through trial and error, the ratio of the cost of the learned action to its overall utility is reduced substantially. Automatically recognizing instances where already-known actions can be transferred and applied would constitute a significant advance for collaborative robotics. This is highlighted by the increasing incorporation of ``demonstration as training signal'', which is becoming more prevalent as computational costs diminish. As this incorporation continues, barriers to dynamic, adaptable, multi-agent multi-human collaboration will be removed. 
 	
 % 3. Talk about decomposing skill sequences into Task plans
-  A hierarchical skill architecture is useful for collaborative task execution. To maximally benefit the collaborative aspects of complex task execution, all agents involved must have reasonable approximations of the intent and plan of each other worker. Humans are naturally receptive to skill scaffolding, expressing a complicated task in terms of actions, sub-actions, and temporal sequencing; a hierarchical skill architecture allows the intentions of each agent to be effectively communicated in a common format. One of the greatest technical challenges of collaborative exercises between multiple agents including both humans and robots is the mutual recognition of intention and action.  A method by which a participant or external observer could automate this process, would clear a significant hurdle to the ability to perform online collaborative exercises.
+  A hierarchical skill architecture is useful for collaborative task execution. To maximally benefit the collaborative aspects of complex task execution, all agents involved must have reasonable approximations of the intent and plan of each other worker. Humans are naturally receptive to skill scaffolding, expressing a complicated task in terms of actions, sub-actions, and temporal sequencing; a hierarchical skill architecture allows the intentions of each agent to be effectively communicated in a common format. One of the greatest technical challenges of collaborative exercises between multiple agents including both humans and robots is the mutual recognition of intention and action.
  
 % 5. Accounting for multiple skills complicates the learning and execution problem
   Work by Martinson et. al. \shortcite{QLBehaviorSelection} shows the benefit of using combinations of pretested behavioral assemblages to successfully accomplish a complex goal in a dynamic environment. They associate a list of sensor states, referenced as perceptual triggers, with constructed sets of pretrained actions with stable policies. This decision reduces the MDP search space when considering potential skills to apply, while enhancing the insight human operators have into the agent's potential actions by providing an intuitive mechanism for specifying action/reaction pairs. Mugan and Kuipers \shortcite{AutoHierarchyLearning} approached this problem similarly to Konidaris, in that they look to autonomously abstract portable options that can be transferred between environments from their agent's experiences. Particularly of note, the QLAP algorithm operates through qualitative representations of the continuous world \cite{AutoHierarchyLearning}. This provides a tolerance for incomplete input information while disregarding irrelevant dimensions of the state space. As such, QLAP learns action hierarchies while maintaining both temporal and state abstraction. From a practical standpoint, maintaining state abstraction is crucial for maintaining usable performance levels as most real-world examples cannot be directly approached due to intractably large state space.
@@ -106,7 +106,7 @@ task into primitive actions
   Because the exploration space of generic Q-Learning problems scale exponentially with dimensionality, heuristics that reduce the number of trials required to achieve desirable policies are actively being researched. One example heuristic uses human feedback as both an immediate and anticipatory reward signal, leveraging human foresight to effectively reduce the search depth required to learn acceptable paths through state space \cite{TAMER}. Another effective heuristic involves leveraging data obtained through observing demonstrations of skills to favorably influence transition probabilities within the MDP, achieving accelerated convergence to an acceptable policy \cite{LFDSurvey}. Works like these reduce the number of trials required by several orders of magnitude with minimal sacrifice in resulting skill quality.
 
 % 4. Talk about high level contribution to solving this problem.
-  For a co-robot to interact as a productive member of a team, it must be able to recognize and correctly classify peer behaviors. This situational awareness is instrumental in achieving intelligent cooperation, of the same or greater importance as being capable of executing actions independently. To achieve this on a practical level, it is necessary to intelligently group sets of primitive actions together into complex options. 
+  For a co-robot to interact as a productive member of a team, it must be able to recognize and correctly classify peer behaviors. Our system does just this.  By improving the agent's situational awareness, intelligent cooperation is facilitated, which can result in greater productivity than a sole agent executing actions independently.  Furthermore, leveraging the common MDP representation of action primitives during observation allows a unified internal skill representation whether the agent is responding to coworkers or performing an action itself.
 
 \section{Definition of Problem Space}
 \label{sec:pspace}
