--- a/papers/AAAI/report.tex
+++ b/papers/AAAI/report.tex
@@ -28,7 +28,7 @@ New Haven, Connecticut 06511\\
 
 \begin{abstract}
  Recent work has shown that with human
-assistance, complex actions can be learned with limited training data. The
+assistance, robots can learn to perform complex actions with limited training data. The
 resulting skill representations can be leveraged to replay flexible behaviors
 that dramatically increase the utility of the robot. Despite this, existing
 systems have yet to address the greater problem of cooperative action execution.
@@ -40,10 +40,10 @@ allowing a robot to solve skill recognition, the inverse problem of skill execut
 in real-time. Our algorithm provides a coded timeline of
 primitive actions generated in real-time, correcting its hypotheses as more
 information is presented. We demonstrate our results through the recognition of selected
-American Sign Language gestures. Our work is unique in that it extends Q-Tables,
-a product of Q-Learning that are consistently used to model skills,
-to create a unified data structure capable of both skill execution
-and skill recognition.  This data can then be directly used to facilitate the
+American Sign Language gestures. Our work is unique in that it extends the already broad applicability of
+Q-Learning within skill modeling
+to create a unified data structure capable of skill recognition in addition to skill execution.
+The data produced by our algorithm can then be directly used to facilitate the
 creation of a skill hierarchy fully decomposing a complex cooperative 
 task into primitive actions.
 \end{abstract}
